<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_grad"
    android:id="@+id/main">

    <!-- инструкция -->
    <LinearLayout
        android:id="@+id/instructionsLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="75dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginFormLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:text="@string/info_auth"
            android:textColor="#FFFFFF"
            style="@style/TextH2"
            android:layout_margin="24dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/instruct"
            android:textColor="#FFFFFF"
            style="@style/TextH1"
            android:layout_margin="24dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/info_auth1"
            android:textColor="#FFFFFF"
            style="@style/TextH5"
            android:layout_margin="24dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/info_auth2"
            android:textColor="#FFFFFF"
            style="@style/TextH5"
            android:layout_margin="24dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/info_auth3"
            android:textColor="#FFFFFF"
            style="@style/TextH5"
            android:layout_margin="24dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Правый блок с формой входа -->
    <LinearLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_card"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="45dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/instructionsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Вход"
            android:fontFamily="@font/jura"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTabName"
            android:layout_width="255dp"
            android:layout_height="50dp"
            android:hint="Табельный №"
            android:fontFamily="@font/jura"
            android:padding="12dp"
            android:textSize="14sp"
            android:background="@drawable/edittext_st"
            android:textColor="#000000"
            android:textColorHint="#999999"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Auth"
            android:layout_width="225dp"
            android:layout_marginTop="30dp"
            android:layout_height="50dp"
            android:fontFamily="@font/jura"
            android:text="Войти"
            android:textColor="#FFFFFF"
            app:cornerRadius="12dp"
            app:backgroundTint="@color/d_blue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>